--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2",
-    "nodemon": "^1.11.0"
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2" ,
+    "nodemon": "^1.11.0",
+    "nunjucks": "^3.0.0"
   }
 }
