--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
-    "express": "^4.15.2" ,
+    "express": "^4.15.2",
+    "morgan": "^1.8.1",
     "nodemon": "^1.11.0",
     "nunjucks": "^3.0.0"
   }
